Made Create responsive, except for tags (still to do, can we live with it)

--- a/Waiter/views/admin/create.twig
+++ b/Waiter/views/admin/create.twig
@@ -275,7 +275,7 @@
                     </select>
                 </h1>
             </div>
-            <div class="col-sm-8">
+            <div class="col-xl-8 col-lg-6 col-md-12 col-sm-12">
                 <p>Select one of the trending post subjects on the right, or create your own. Ideally post 3 <strong>trending searches</strong> a week to feed the search engines optimally.</p>
                 <div class="vs-panel row">
                     <div id="motd" class="col-sm-12">
@@ -283,19 +283,14 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4 float-right">
+            <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 float-right">
                 <h2>Trending searches <i id="topic-refresh" class="fa fa-refresh" onclick="getTrendingTopics()"></i></h2>
                 <ul id="trending-topics" class="hoverable">
                 </ul>
             </div>
             <div class="col-sm-12">
                 <div class="subject">
-                    <h2>
-                        <label for="post_title">
-                            Subject
-                        </label>
-                    </h2>
-                    <input type="text" name="post_title" id="post_title" value=""/>
+                    <input type="text" title="Subject" name="post_title" id="post_title" value=""/>
                 </div>
             </div>
             <div class="col-sm-12">
