Fixed occasional error alert on create, caused by ajax and page refresh clashing Removed Dashboard Tab Reduced Card Title font-weight to normal (not bold, or 600)

--- a/Waiter/views/admin/admin-tabs.twig
+++ b/Waiter/views/admin/admin-tabs.twig
@@ -2,7 +2,8 @@
     <div class="col-sm-8">
         <h2 class="">
             <a href="?page=vacation-soup-admin&tab=create" class="nav-tab{{ (tab=='create') ? ' nav-tab-active' }}">Create</a>
-            <a href="?page=vacation-soup-admin&tab=dash" class="nav-tab{{ (tab=='dash') ? ' nav-tab-active' }}">Dash</a>
+            {#<a href="?page=vacation-soup-admin&tab=dash" class="nav-tab{{ (tab=='dash') ? ' nav-tab-active' }}">Dashboard</a>#}
+            {#<a href="?page=vacation-soup-admin&tab=list" class="nav-tab{{ (tab=='list') ? ' nav-tab-active' }}">Lists</a>#}
             <a href="?page=vacation-soup-admin&tab=owner" class="nav-tab{{ (tab=='owner') ? ' nav-tab-active' }}">Owner</a>
             <a href="?page=vacation-soup-admin&tab=property" class="nav-tab{{ (tab=='property') ? ' nav-tab-active' }}">Property</a>
             <a href="?page=vacation-soup-admin&tab=connect" class="nav-tab{{ (tab=='connect') ? ' nav-tab-active' }}">Connect</a>
