--- a/css/vs-admin.css
+++ b/css/vs-admin.css
@@ -1,5 +1,5 @@
 .vs-content {
-    margin: 15px 15px 0 0;
+    margin: 15px -15px 0 0;
 }
 
 .vs-panel {
@@ -185,12 +185,12 @@ DIV.media-selector {
 }
 
 DIV.field LABEL{
-    min-width: 30%;
+    min-width: 20%;
     display: inline-block;
 }
-/*DIV.social.field LABEL{
-    min-width: 80px;
-}*/
+.field-row INPUT[type="button"] {
+    margin: 10px 0 0 20%;
+}
 
 DIV.social.field LABEL,
 DIV.social.field INPUT[type="text"] {
@@ -200,25 +200,12 @@ DIV.social.field INPUT[type="text"] {
 
 DIV.field INPUT[type='text']{
     min-width: 65%;
-    /*display: inline-block;*/
-}
-
-.social-icons {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    margin: 0;
-    padding: 15px;
-    align-items: flex-start;
-    justify-content: left;
-    min-height: 300px;
 }
 
 i {
     position: relative;
     padding: 0 10px;
+    width: 61px;
 }
 
 .fa-facebook-square         {  color: #4867AA;  }
@@ -230,142 +217,140 @@ i {
 .fa-stumbleupon-circle      {  color: #f74425;  }
 .fa-instagram               {  color: #e95950;  }
 
-.social-icons i,
-.social-icons .currently-editing i:hover {
+.social-icons-container i,
+.social-icons-container .currently-editing i:hover {
     cursor: pointer;
     margin-top: 0;
     text-shadow: 0 7px 10px rgba(0, 0, 0, 0.4);
     transition: all ease-in-out 150ms;
 }
-.social-icons .social-container:not(.currently-editing) i:hover {
+.social-icons-container .social-container:not(.currently-editing) i:hover {
     margin-top: -10px;
     text-shadow: 4px 16px 12px rgba(0, 0, 0, 0.2);
     transform: translate(0, -8px);
 }
-
 .social-container {
     display: inline-flex;
     transition: all ease-in-out 150ms;
-    flex-basis: 75px;
 }
-.social-container .field-container {
-    display: inline-flex;
-    max-height: 0;
-    max-width: 0;
+.social-fields-container .field-container {
+    max-height:0;
 }
-.social-container .field-row {
-    max-width: none;
-    max-height: none;
+
+.social-fields-container .field-container.currently-editing {
+    max-height:none;
 }
-.social-container .field {
-    width: 600px;
-}
-.social-container .field-container INPUT[type=checkbox]
-{
-    display: none;
-}
-.social-container .field-container,
-.social-container .field-container INPUT
+
+.social-fields-container .field-container,
+.social-fields-container .field-container INPUT
 {
     color: rgba(255, 255, 255, 0.0);
     border-color: rgba(255, 255, 255, 0.0);
     -webkit-box-shadow: inset 0 1px 2px rgba(255, 255, 255, 0.0);
     box-shadow: inset 0 1px 2px rgba(255, 255, 255, 0.0);
-    transition: all 200ms linear;
+    transition: all 800ms linear;
 }
 DIV.field-container INPUT.persist[disabled]
 {
-    color: rgba(0,100,0,0.5);
+    color: rgba(50,200,50,0.5);
 }
-.social-container.currently-editing .field-container
-{
-    color: rgba(0, 0, 0, 1.0);
-    transition:all 800ms ease-in;
+.social-icons-container {
+    margin-bottom: 25px;
 }
-.social-container.currently-editing .field LABEL {
-    display: inline-block;
-    text-align: left;
-    margin-left: 15px;
-}
-.social-container.currently-editing .field INPUT {
-    display: inline-block;
-}
-.social-container .field INPUT[type='text']
-{
-    max-width: 5%;
-    min-width: 5%;
-}
-.social-container.currently-editing .field INPUT[type='text']
-{
-    max-width: 65%;
-    min-width: 65%;
+.social-fields-container {
+    margin-left: 80px;
+    min-height: 400px;
 }
 
-DIV.social-container.currently-editing DIV.field-container INPUT
+.social-fields-container DIV {
+    overflow: hidden;
+}
+
+.social-fields-container .field-container.currently-editing
+{
+    z-index: 1000;
+    color: rgba(0, 0, 0, 1.0);
+    /* transition:all 800ms ease-in; */
+}
+
+DIV.field-container.currently-editing  INPUT
 {
     border-color: rgba(221, 221, 221, 1.0);
     color: rgba(0, 0, 0, 1.0);
     -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.07);
     box-shadow: inset 0 1px 2px rgba(0,0,0,.07);
 }
-.social-container.currently-editing {
-    transition: all 600ms ease-in-out;
+.currently-editing {
+    transition: all 600ms ease-in; /* in-out */
 }
-.social-container.currently-editing:nth-child(1) {
-    -webkit-transform: translate(0,150%);
-    -moz-transform: translate(0,150%);
-    -ms-transform: translate(0,150%);
-    -o-transform: translate(0,150%);
-    transform: translate(0,150%);
+
+.social-icons-container .currently-editing:nth-child(1) {
+    transform: translate(0,90px);
 }
-.social-container.currently-editing:nth-child(2) {
-    -webkit-transform: translate(-75px,150%);
-    -moz-transform: translate(-75px,150%);
-    -ms-transform: translate(-75px,150%);
-    -o-transform: translate(-75px,150%);
-    transform: translate(-75px,150%);
+.social-icons-container .currently-editing:nth-child(2) {
+    transform: translate(-65px,90px);
 }
-.social-container.currently-editing:nth-child(3) {
-    -webkit-transform: translate(-150px,150%);
-    -moz-transform: translate(-150px,150%);
-    -ms-transform: translate(-150px,150%);
-    -o-transform: translate(-150px,150%);
-    transform: translate(-150px,150%);
+.social-icons-container .currently-editing:nth-child(3) {
+    transform: translate(-130px,90px);
 }
-.social-container.currently-editing:nth-child(4) {
-    -webkit-transform: translate(-225px,150%);
-    -moz-transform: translate(-225px,150%);
-    -ms-transform: translate(-225px,150%);
-    -o-transform: translate(-225px,150%);
-    transform: translate(-225px,150%);
+.social-icons-container .currently-editing:nth-child(4) {
+    transform: translate(-195px,90px);
 }
-.social-container.currently-editing:nth-child(5) {
-    -webkit-transform: translate(-300px,150%);
-    -moz-transform: translate(-300px,150%);
-    -ms-transform: translate(-300px,150%);
-    -o-transform: translate(-300px,150%);
-    transform: translate(-300px,150%);
+.social-icons-container .currently-editing:nth-child(5) {
+    transform: translate(-260px,90px);
 }
-.social-container.currently-editing:nth-child(6) {
-    -webkit-transform: translate(-375px,150%);
-    -moz-transform: translate(-375px,150%);
-    -ms-transform: translate(-375px,150%);
-    -o-transform: translate(-375px,150%);
-    transform: translate(-375px,150%);
+.social-icons-container .currently-editing:nth-child(6) {
+    transform: translate(-325px,90px);
 }
-.social-container.currently-editing:nth-child(7) {
-    -webkit-transform: translate(-450px,150%);
-    -moz-transform: translate(-450px,150%);
-    -ms-transform: translate(-450px,150%);
-    -o-transform: translate(-450px,150%);
-    transform: translate(-450px,150%);
+.social-icons-container .currently-editing:nth-child(7) {
+    transform: translate(-390px,90px);
 }
-.social-container.currently-editing:nth-child(8) {
-    -webkit-transform: translate(-525px,150%);
-    -moz-transform: translate(-525px,150%);
-    -ms-transform: translate(-525px,150%);
-    -o-transform: translate(-525px,150%);
-    transform: translate(-525px,150%);
+.social-icons-container .currently-editing:nth-child(8) {
+    transform: translate(-455px,90px);
+}
+
+.social-icons-container {
+    width: 520px;
+}
+@media only screen and (max-width : 1200px){
+    .social-icons-container {
+        width: 260px;
+    }
+    DIV.field LABEL,
+    DIV.field INPUT {
+        display: block;
+        max-width: 100%;
+    }
+    .center-xs .soup-icon {
+        width: auto;
+        float:none;
+        margin: 0 auto;
+
+    }
+    .social-icons-container .currently-editing:nth-child(1) {
+        transform: translate(0,155px);
+    }
+    .social-icons-container .currently-editing:nth-child(2) {
+        transform: translate(-65px,155px);
+    }
+    .social-icons-container .currently-editing:nth-child(3) {
+        transform: translate(-130px,155px);
+    }
+    .social-icons-container .currently-editing:nth-child(4) {
+        transform: translate(-195px,155px);
+    }
+    .social-icons-container .currently-editing:nth-child(5) {
+        transform: translate(0,90px);
+    }
+    .social-icons-container .currently-editing:nth-child(6) {
+        transform: translate(-65px,90px);
+    }
+    .social-icons-container .currently-editing:nth-child(7) {
+        transform: translate(-130px,90px);
+    }
+    .social-icons-container .currently-editing:nth-child(8) {
+        transform: translate(-195px,90px);
+    }
 }
 
 .soup-icon.hover IMG {
