--- a/css/vs-admin.css
+++ b/css/vs-admin.css
@@ -282,7 +282,7 @@ DIV.field-container.currently-editing  INPUT
     box-shadow: inset 0 1px 2px rgba(0,0,0,.07);
 }
 .currently-editing {
-    transition: all 600ms ease-in; /* in-out */
+    transition: all 600ms ease-out; /* in-out */
 }
 
 .social-icons-container .currently-editing:nth-child(1) {
