Added multiple destinations per property

--- a/Waiter/views/admin/connect.twig
+++ b/Waiter/views/admin/connect.twig
@@ -24,6 +24,7 @@
                     };
                     jQuery.ajax(ServiceAjaxCall)
                         .fail(function (jqXHR, status, error) {
+                            if (unloading) return;
                             console.log('fail (vacation-soup) ' + status + ' ' + error);
                             jQuery(this).addClass('nok')
                                 .find('I')
@@ -31,6 +32,7 @@
                                 .addClass('fa-chain-broken');
                         })
                         .done(function (response) {
+                            if (unloading) return;
                             var status,title;
                             if (response.success){
                                 status = response.status;
@@ -47,6 +49,7 @@
                                 .parent().prop('title',title);
                         })
                         .always(function(){
+                            if (unloading) return;
                             jQuery(this).removeClass("checking");
                         });
                 });
