--- a/Waiter/views/admin/form.twig
+++ b/Waiter/views/admin/form.twig
@@ -1,4 +1,9 @@
 <script>
+    var unloading = false;
+    jQuery(window).unload(function(){
+        unloading = true;
+    });
+
     jQuery(function() {
         jQuery('.persist').change(function () {
             var ajaxCall;
@@ -48,10 +53,12 @@
 
             jQuery.ajax(ajaxCall)
                 .fail(function(jqXHR,status,error) {
+                    if (unloading) return;
                     console.log('fail (vacation-soup) '+status+' '+error);
                     alert('Error: Could not save change, refreshing page may help\n'+status);
                 })
                 .done(function(response) {
+                    if (unloading) return;
                     var msg = 'Not connected to Kitchen';
                     this.disabled=false;
                     if (!response || response.error && !jQuery(this).hasClass('quiet')) {
@@ -62,6 +69,7 @@
                     }
                 })
                 .always(function(response){
+                    if (unloading) return;
                     var thenDo = jQuery(this).data('persist-action');
                     if (thenDo){
                         eval(thenDo);
