Add Biline attributtion, v 1 Force navigation to tabs based on what's been completed

--- a/Waiter/views/admin/create.twig
+++ b/Waiter/views/admin/create.twig
@@ -357,7 +357,7 @@
                 <h2>Tags</h2>
                 <ul class="tags-container checklist hoverable">
                     <li class="checklist-item">{# The contents are replaced by javascript #}
-                        There are no automatic tags for this topic.
+                        Creating autotags...
                     </li>
                 </ul>
             </div>
