- Corrected auto-navigation of tabs on setup   - Not displaying owners name on owners tab correctly   - Re-added password field on connect screen

--- a/Waiter/views/admin/property.twig
+++ b/Waiter/views/admin/property.twig
@@ -45,7 +45,7 @@
                             "#VacationSoup #"+destVal+" #Holiday"+joinVal+destVal+" #Vacation"+joinVal+destVal
                         );
                     } else {
-                        target.html("Please enter Title and Destination to see example tags.")
+                        target.html("Please enter Title and at least one Destination to see example tags.")
                     }
                 }
                 jQuery(function(){
