--- a/Waiter/views/admin/connect.twig
+++ b/Waiter/views/admin/connect.twig
@@ -92,18 +92,25 @@
         <div id="connect-params" class="vs-panel row field-container">
             <div id="title" class="col-sm-12">
                 <h1>The Soup Settings</h1>
+                <p>Please enter the username (email) and password you registered with Vacation Soup. Once set, you cannot change your username. </p>
+                <div class="field">
+                    <label for="kitchen_user">
+                        Username
+                    </label>
+                    <input type="text" class="persist" name="SoupWaiter.kitchen_user" id="kitchen_user" value="{{ soup.kitchen_user }}"/>
+                </div>
+                <div class="field">
+                    <label for="kitchen_password">
+                        Password
+                    </label>
+                    <input type="password" class="persist" name="SoupWaiter.kitchen_password" id="kitchen_password" value=""/>
+                </div>
                 <p>You should not change these values unless advised to do so by a member of the Vacation Soup team.</p>
                 <div class="field">
                     <label for="kitchen_host">
                         Kitchen
                     </label>
                     <input type="text" class="persist" name="SoupWaiter.kitchen_host" id="kitchen_host" value="{{ soup.kitchen_host }}"/>
-                </div>
-                <div class="field">
-                    <label for="kitchen_user">
-                        Username
-                    </label>
-                    <input type="text" class="persist" name="SoupWaiter.kitchen_user" id="kitchen_user" value="{{ soup.kitchen_user }}"/>
                 </div>
                 <div class="field">
                     <label for="kitchen_auth_api">
