--- a/Waiter/views/admin/owner.twig
+++ b/Waiter/views/admin/owner.twig
@@ -18,7 +18,7 @@
                                            placeholder="Name"
                                            name="SoupWaiter.owner_name"
                                            id="owner_name"
-                                           required value="{{ SoupWaiter.owner_name}}"/>
+                                           required value="{{ soup.owner_name}}"/>
                                 </div>
                             </div>
                         </div>
