- Corrected auto-navigation of tabs on setup   - Not displaying owners name on owners tab correctly   - Re-added password field on connect screen

--- a/Waiter/views/admin/admin-tabs.twig
+++ b/Waiter/views/admin/admin-tabs.twig
@@ -17,3 +17,6 @@
         </a>
     </div>
 </div>
+{% if admin.tab_message %}
+    <div class="error vs">{{ admin.tab_message }}</div>
+{% endif %}
