--- a/Waiter/views/admin/form.twig
+++ b/Waiter/views/admin/form.twig
@@ -78,13 +78,14 @@
         })
     });
 </script>
-<form
+<form class="tab-{{ tab }} requested-tab-{{ admin.requested_tab }}"
         name="{% block form_name %}post{% endblock form_name %}"
         action="{% block form_action %}{% endblock form_action %}"
         method="post"
         id="{% block form_id %}{{ block('form_name') }}{% endblock form_id %}">
-    {{ fn('wp_nonce_field', 'vacation-soup-'~tab, '_vs_nonce', false, false) }}
+    {{ fn('wp_nonce_field', 'vacation-soup', '_vs_nonce', false, false) }}
     <input type="hidden" id="tab" name="tab" value="{{ tab }}">
+    <input type="hidden" id="requested-tab" name="requested-tab" value="{{ admin.requested_tab }}">
     <input type="hidden" id="user-id" name="user_ID" value="{{ user.id }}">
     {% block form_header %}{% endblock form_header %}
     {% block form_content %}{% endblock form_content %}
