Added link to registration from connect screen

--- a/Waiter/views/admin/connect.twig
+++ b/Waiter/views/admin/connect.twig
@@ -64,7 +64,7 @@
         <div id="connect-params" class="vs-panel row field-container">
             <div id="title" class="col-sm-12">
                 <h1>The Soup Settings</h1>
-                <p>Please enter the username (email) and password you registered with Vacation Soup. Once set, you cannot change your username. </p>
+                <p>Please enter the username (email) and password you <a href="https://learn.vacationsoup.com" target="_blank">registered with Vacation Soup</a>. Once set, you cannot change your username. </p>
                 <div class="field">
                     <label for="kitchen_user">
                         Username <span class="required">*</span>
